--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0097.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0097.html
@@ -43,8 +43,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 421 279 743 334">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Uieophrastus,</ins>
-            <del title="nlp 0.90">Uieophrastus,</del>
+            <ins title="nlp 2.00">Theophrastus,</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 785 292 929 321" lang="grc">
@@ -72,20 +71,17 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1513 282 1672 329">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">corUra,</ins>
-            <del title="nlp 0.90">corUra,</del>
+            <ins title="nlp 2.00">contra,</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1715 278 1788 332">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">qfii</ins>
-            <del title="nlp 0.90">qfii</del>
+            <ins title="nlp 2.00">qui</ins>
           </span>
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1824 289 1978 329">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ommOf</ins>
-            <del title="nlp 0.90">ommOf</del>
+            <ins title="nlp 2.00">omnia,</ins>
           </span>
         </span>
       </span>
@@ -104,8 +100,7 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 453 351 612 394">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">heatam</ins>
-            <del title="nlp 0.90">heatam</del>
+            <ins title="nlp 2.00">beatam</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 644 352 771 393">
@@ -152,22 +147,19 @@
         </span>
         <span id="w_23" class="ocr_word" title="bbox 1749 348 1977 403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quidquom</ins>
-            <del title="nlp 0.90">quidquom</del>
+            <ins title="nlp 2.00">quidquam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 229 418 1979 476">
         <span id="w_24" class="ocr_word" title="bbox 229 423 352 466">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aliud</ins>
-            <del title="nlp 0.90">aliud</del>
+            <ins title="nlp 2.00">aliud</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 380 426 615 465">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nunieraret</ins>
-            <del title="nlp 0.90">nunieraret</del>
+            <ins title="nlp 2.00">numeraret</ins>
           </span>
         </span>
         <span id="w_26" class="ocr_word" title="bbox 645 423 692 465">
@@ -196,8 +188,7 @@
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1278 421 1507 473">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">fumestum,</ins>
-            <del title="nlp 0.90">fumestum,</del>
+            <ins title="nlp 2.00">honestum,</ins>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1537 420 1646 476">
@@ -291,8 +282,7 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1772 491 1978 534">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Zenanem</ins>
-            <del title="nlp 0.90">Zenanem</del>
+            <ins title="nlp 2.00">Zenonem</ins>
           </span>
         </span>
       </span>
@@ -353,8 +343,7 @@
         </span>
         <span id="w_56" class="ocr_word" title="bbox 1633 563 1742 605">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ulud</ins>
-            <del title="nlp 0.90">Ulud</del>
+            <ins title="nlp 2.00">illud</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 1771 576 1909 605">
@@ -481,8 +470,7 @@
         </span>
         <span id="w_77" class="ocr_word" title="bbox 1590 705 1710 748">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUa</ins>
-            <del title="nlp 0.90">nuUa</del>
+            <ins title="nlp 2.00">nulla</ins>
           </span>
         </span>
         <span id="w_78" class="ocr_word" title="bbox 1741 706 1789 748">
@@ -499,8 +487,7 @@
         </span>
         <span id="w_80" class="ocr_word" title="bbox 1892 704 1980 748">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">niai</ins>
-            <del title="nlp 0.90">niai</del>
+            <ins title="nlp 2.00">nisi</ins>
           </span>
         </span>
       </span>
@@ -511,15 +498,24 @@
             <del title="nlp 0.90">in</del>
           </span>
         </span>
-        <span id="w_82" class="ocr_word" title="bbox 305 782 455 825">
+        <span id="w_82_0" class="ocr_word" title="bbox 305 782 455 825">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">virtuie</ins>
-            <del title="nlp 0.90">virtuie</del>
+            <ins class="alt" title="nlp 2.00">virtute</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 485 780 585 837">
+        <span id="w_82_1" class="ocr_word" title="bbox 305 782 455 825">
           <span class="alternatives">
-            <ins title="nlp 2.00">[aut uitio]</ins>
+            <ins class="alt" title="nlp 2.00">[aut</ins>
+          </span>
+        </span>
+        <span id="w_83_0" class="ocr_word" title="bbox 485 780 585 837">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">vitio]</ins>
+          </span>
+        </span>
+        <span id="w_83_1" class="ocr_word" title="bbox 485 780 585 837">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 764 780 1081 834">
@@ -554,11 +550,6 @@
         <span id="w_90" class="ocr_word" title="bbox 1793 777 1852 818" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ad</ins>
-          </span>
-        </span>
-        <span id="w_91" class="ocr_word" title="bbox 1868 789 1980 819">
-          <span class="alternatives">
-            <ins title="nlp 2.00">summum</ins>
           </span>
         </span>
       </span>
@@ -660,8 +651,7 @@
         </span>
         <span id="w_109" class="ocr_word" title="bbox 1153 922 1441 978">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">appetitionetn</ins>
-            <del title="nlp 0.90">appetitionetn</del>
+            <ins title="nlp 2.00">appetitionem</ins>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 1480 924 1619 963">
@@ -702,8 +692,7 @@
         </span>
         <span id="w_116" class="ocr_word" title="bbox 317 999 522 1039">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">momerUa</ins>
-            <del title="nlp 0.90">momerUa</del>
+            <ins title="nlp 2.00">momenta</ins>
           </span>
         </span>
         <span id="w_117" class="ocr_word" title="bbox 552 996 711 1037">
@@ -741,8 +730,7 @@
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1268 996 1404 1035">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">autetn</ins>
-            <del title="nlp 0.90">autetn</del>
+            <ins title="nlp 2.00">autem</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1435 992 1544 1046">
@@ -819,16 +807,14 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1788 1061 1980 1117">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">appeUat,</ins>
-            <del title="nlp 0.90">appeUat,</del>
+            <ins title="nlp 2.00">appellat,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 229 1132 1979 1191">
         <span id="w_138" class="ocr_word" title="bbox 229 1139 389 1182">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">heatam</ins>
-            <del title="nlp 0.90">heatam</del>
+            <ins title="nlp 2.00">beatam</ins>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 422 1142 559 1181">
@@ -874,8 +860,7 @@
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1461 1136 1644 1190">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">degatwr.</ins>
-            <del title="nlp 0.90">degatwr.</del>
+            <ins title="nlp 2.00">degatur.</ins>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 1672 1159 1726 1164">
@@ -946,8 +931,7 @@
         </span>
         <span id="w_158" class="ocr_word" title="bbox 1465 1208 1603 1258">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aiurU,</ins>
-            <del title="nlp 0.90">aiurU,</del>
+            <ins title="nlp 2.00">aiunt,</ins>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1635 1206 1792 1260">
@@ -1013,8 +997,7 @@
         </span>
         <span id="w_169" class="ocr_word" title="bbox 1177 1283 1323 1333">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">petcmt</ins>
-            <del title="nlp 0.90">petcmt</del>
+            <ins title="nlp 2.00">petant</ins>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 1353 1279 1506 1333">
@@ -1132,8 +1115,7 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 844 1674 885 1717">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_189" class="ocr_word" title="bbox 926 1691 965 1732">
@@ -1200,9 +1182,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_202" class="ocr_word" title="bbox 881 1746 1091 1790" lang="grc">
+        <span id="w_202_0" class="ocr_word" title="bbox 881 1746 1091 1790">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ ’ ὄντων</ins>
+            <ins class="alt" title="nlp 2.00">δ᾿</ins>
+          </span>
+        </span>
+        <span id="w_202_1" class="ocr_word" title="bbox 881 1746 1091 1790">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὄντων</ins>
           </span>
         </span>
         <span id="w_203" class="ocr_word" title="bbox 1122 1764 1175 1790" lang="grc">
@@ -1526,8 +1513,7 @@
       <span class="ocr_line" title="bbox 788 2342 1431 2389">
         <span id="w_266" class="ocr_word" title="bbox 788 2343 883 2389">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">in.</ins>
-            <del title="nlp 0.90">in.</del>
+            <ins title="nlp 2.00">ΙΙΙ.</ins>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 923 2342 992 2387">
@@ -1552,8 +1538,7 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1067 2413 1119 2448">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">m</ins>
-            <del title="nlp 0.90">m</del>
+            <ins title="nlp 2.00">ΙΙΙ</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1144 2426 1179 2460">
@@ -1815,8 +1800,7 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1810 2726 1988 2765">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">natwrae</ins>
-            <del title="nlp 0.90">natwrae</del>
+            <ins title="nlp 2.00">naturae</ins>
           </span>
         </span>
       </span>
@@ -1991,8 +1975,7 @@
         </span>
         <span id="w_345" class="ocr_word" title="bbox 1795 3043 1891 3080">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lHtri.</ins>
-            <del title="nlp 0.90">lHtri.</del>
+            <ins title="nlp 2.00">libri.</ins>
           </span>
         </span>
       </span>
@@ -2022,8 +2005,7 @@
         </span>
         <span id="w_350" class="ocr_word" title="bbox 678 3102 868 3138">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Davisiua.</ins>
-            <del title="nlp 0.90">Davisiua.</del>
+            <ins title="nlp 2.00">Davisius.</ins>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1017 3104 1060 3136">
@@ -2039,8 +2021,7 @@
         </span>
         <span id="w_353" class="ocr_word" title="bbox 1178 3111 1236 3135">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rcs</ins>
-            <del title="nlp 0.90">rcs</del>
+            <ins title="nlp 2.00">res</ins>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 1268 3100 1451 3135">
@@ -2051,8 +2032,7 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 1486 3099 1634 3144">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scripfii,</ins>
-            <del title="nlp 0.90">scripfii,</del>
+            <ins title="nlp 2.00">scripsi,</ins>
           </span>
         </span>
         <span id="w_356" class="ocr_word" title="bbox 1672 3109 1717 3133">
@@ -2106,8 +2086,7 @@
         </span>
         <span id="w_364" class="ocr_word" title="bbox 959 3155 1054 3191">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lihri.</ins>
-            <del title="nlp 0.90">lihri.</del>
+            <ins title="nlp 2.00">libri.</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1155 3158 1197 3189">
@@ -2129,8 +2108,7 @@
         </span>
         <span id="w_368" class="ocr_word" title="bbox 1566 3152 1717 3188">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">secludH</ins>
-            <del title="nlp 0.90">secludH</del>
+            <ins title="nlp 2.00">secludit</ins>
           </span>
         </span>
         <span id="w_369" class="ocr_word" title="bbox 1746 3152 1884 3187">
