--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0120.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0120.html
@@ -63,7 +63,7 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1583 308 1780 365" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ζήνων)</ins>
+            <ins title="nlp 2.00">(Ζήνων)</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1830 325 1914 365" lang="grc">
@@ -337,9 +337,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 575 736 712 779">
+        <span id="w_61_0" class="ocr_word" title="bbox 575 736 712 779">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_61_1" class="ocr_word" title="bbox 575 736 712 779">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 739 734 823 777">
@@ -381,11 +386,6 @@
         <span id="w_69" class="ocr_word" title="bbox 1787 733 1949 785" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐνδεεῖς</ins>
-          </span>
-        </span>
-        <span id="w_70" class="ocr_word" title="bbox 1991 733 2049 785" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
       </span>
@@ -431,7 +431,7 @@
         </span>
         <span id="w_78" class="ocr_word" title="bbox 1491 875 1688 933" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ζήνων)</ins>
+            <ins title="nlp 2.00">(Ζήνων)</ins>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 1733 875 1969 932" lang="grc">
@@ -463,12 +463,17 @@
         </span>
         <span id="w_84" class="ocr_word" title="bbox 601 952 776 1004" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἄλλος,</ins>
+            <ins title="nlp 2.00">ἄλλος,</ins>
           </span>
         </span>
-        <span id="w_85" class="ocr_word" title="bbox 807 949 964 1003" lang="grc">
+        <span id="w_85_0" class="ocr_word" title="bbox 807 949 964 1003">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ἔφη&amp;x003E;,</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἔφη&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_85_1" class="ocr_word" title="bbox 807 949 964 1003">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_86" class="ocr_word" title="bbox 997 943 1089 997" lang="grc">
@@ -492,25 +497,20 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 1588 947 1724 990">
+        <span id="w_90_0" class="ocr_word" title="bbox 1588 947 1724 990">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_90_1" class="ocr_word" title="bbox 1588 947 1724 990">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_91" class="ocr_word" title="bbox 1744 946 1827 989">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">VII</ins>
             <del title="nlp 0.90">VII</del>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 1846 948 1914 989">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">23.</ins>
-          </span>
-        </span>
-        <span id="w_93" class="ocr_word" title="bbox 1947 946 2050 1003" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐρωτηθεὶς</ins>
           </span>
         </span>
       </span>
@@ -558,9 +558,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_103" class="ocr_word" title="bbox 810 1090 947 1132">
+        <span id="w_103_0" class="ocr_word" title="bbox 810 1090 947 1132">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_103_1" class="ocr_word" title="bbox 810 1090 947 1132">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_104" class="ocr_word" title="bbox 974 1088 1056 1131">
@@ -597,11 +602,6 @@
         <span id="w_110" class="ocr_word" title="bbox 1722 1105 1838 1145" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παρὰ</ins>
-          </span>
-        </span>
-        <span id="w_111" class="ocr_word" title="bbox 1881 1090 2054 1145" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μικρόν,</ins>
           </span>
         </span>
       </span>
@@ -847,7 +847,7 @@
         </span>
         <span id="w_155" class="ocr_word" title="bbox 821 1516 958 1558">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 984 1514 1068 1558">
@@ -1030,9 +1030,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_190" class="ocr_word" title="bbox 816 1799 953 1841">
+        <span id="w_190_0" class="ocr_word" title="bbox 816 1799 953 1841">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_190_1" class="ocr_word" title="bbox 816 1799 953 1841">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 979 1798 1065 1841">
@@ -1069,11 +1074,6 @@
         <span id="w_197" class="ocr_word" title="bbox 1777 1814 1911 1855" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μικρὰ</ins>
-          </span>
-        </span>
-        <span id="w_198" class="ocr_word" title="bbox 1941 1803 2060 1841" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
           </span>
         </span>
       </span>
@@ -1188,9 +1188,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 814 2014 950 2056">
+        <span id="w_220_0" class="ocr_word" title="bbox 814 2014 950 2056">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_220_1" class="ocr_word" title="bbox 814 2014 950 2056">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 977 2012 1060 2055">
@@ -1227,11 +1232,6 @@
         <span id="w_227" class="ocr_word" title="bbox 1808 2017 1901 2061" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">τοῖς</ins>
-          </span>
-        </span>
-        <span id="w_228" class="ocr_word" title="bbox 1931 2023 2063 2053" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποσὶν</ins>
           </span>
         </span>
       </span>
@@ -1372,9 +1372,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_253" class="ocr_word" title="bbox 821 2298 958 2340">
+        <span id="w_253_0" class="ocr_word" title="bbox 821 2298 958 2340">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_253_1" class="ocr_word" title="bbox 821 2298 958 2340">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_254" class="ocr_word" title="bbox 985 2297 1069 2340">
@@ -1411,11 +1416,6 @@
         <span id="w_260" class="ocr_word" title="bbox 1738 2312 1887 2352" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φωνῆς</ins>
-          </span>
-        </span>
-        <span id="w_261" class="ocr_word" title="bbox 1924 2300 2066 2345" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄνθος</ins>
           </span>
         </span>
       </span>
@@ -1510,17 +1510,11 @@
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1889 2437 2066 2493">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scripse-</ins>
+            <ins title="nlp 2.00">scripserunt</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 333 2509 2067 2567">
-        <span id="w_279" class="ocr_word" title="bbox 333 2517 433 2555">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rimt</ins>
-            <del title="nlp 0.90">scripserimt</del>
-          </span>
-        </span>
         <span id="w_280" class="ocr_word" title="bbox 465 2513 652 2555">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Cobetus</ins>
@@ -1950,17 +1944,17 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1196 2977 1202 2983">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1227 2978 1232 2983">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_359" class="ocr_word" title="bbox 1256 2977 1261 2983">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_360" class="ocr_word" title="bbox 1299 2950 1357 2983">
