--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0122.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0122.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 319 197 1311 241">
         <span id="w_0" class="ocr_word" title="bbox 319 197 380 241" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">ΓΑ</ins>
+            <ins title="nlp 2.00">72</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1061 197 1311 230">
@@ -1019,9 +1019,14 @@
             <del title="nlp 0.90">XXV.</del>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 638 2441 769 2493" lang="grc">
+        <span id="w_177_0" class="ocr_word" title="bbox 638 2441 769 2493">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΙΙερὶ</ins>
+            <ins class="alt" title="nlp 2.00">Περὶ</ins>
+          </span>
+        </span>
+        <span id="w_177_1" class="ocr_word" title="bbox 638 2441 769 2493">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_178" class="ocr_word" title="bbox 800 2444 891 2480" lang="grc">
@@ -1042,11 +1047,6 @@
         <span id="w_181" class="ocr_word" title="bbox 1286 2439 1416 2479" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Βίου</ins>
-          </span>
-        </span>
-        <span id="w_182" class="ocr_word" title="bbox 1450 2435 1583 2492">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(ind.).</ins>
           </span>
         </span>
       </span>
