--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0127.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0127.html
@@ -217,9 +217,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 703 574 840 617">
+        <span id="w_41_0" class="ocr_word" title="bbox 703 574 840 617">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_41_1" class="ocr_word" title="bbox 703 574 840 617">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 862 573 945 617">
@@ -252,11 +257,6 @@
         <span id="w_47" class="ocr_word" title="bbox 1689 574 1958 627" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ὀνειδισθεὶς</ins>
-          </span>
-        </span>
-        <span id="w_48" class="ocr_word" title="bbox 1976 595 1994 622">
-          <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -308,7 +308,7 @@
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1767 649 1835 703">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,εἰ</ins>
+            <ins title="nlp 2.00">εἰ</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1867 655 1958 699" lang="grc">
@@ -361,9 +361,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 706 790 842 832">
+        <span id="w_68_0" class="ocr_word" title="bbox 706 790 842 832">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_68_1" class="ocr_word" title="bbox 706 790 842 832">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 865 788 946 832">
@@ -395,11 +400,6 @@
         <span id="w_74" class="ocr_word" title="bbox 1594 794 1799 845" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μαθητοῦ</ins>
-          </span>
-        </span>
-        <span id="w_75" class="ocr_word" title="bbox 1817 792 1959 834" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολλὰ</ins>
           </span>
         </span>
       </span>
@@ -449,9 +449,9 @@
             <ins class="alt" title="nlp 1.00">θρασέως</ins>
           </span>
         </span>
-        <span id="w_85" class="ocr_word" title="bbox 1826 862 1960 917" lang="grc">
+        <span id="w_85_0" class="ocr_word" title="bbox 1826 862 1960 917">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἀδύνατον,</ins>
+            <ins class="alt" title="nlp 2.00">„ἀδύνατον,</ins>
           </span>
         </span>
       </span>
@@ -463,7 +463,7 @@
         </span>
         <span id="w_88" class="ocr_word" title="bbox 574 932 674 983" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins title="nlp 2.00">(τὸν</ins>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 709 931 935 988" lang="grc">
@@ -788,7 +788,7 @@
         </span>
         <span id="w_152" class="ocr_word" title="bbox 1334 1363 1444 1417" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἤδη</ins>
+            <ins title="nlp 2.00">ἤδη</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1478 1362 1530 1404" lang="grc">
@@ -1085,9 +1085,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_209" class="ocr_word" title="bbox 713 1863 851 1906">
+        <span id="w_209_0" class="ocr_word" title="bbox 713 1863 851 1906">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_209_1" class="ocr_word" title="bbox 713 1863 851 1906">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 872 1862 933 1906">
@@ -1119,11 +1124,6 @@
         <span id="w_215" class="ocr_word" title="bbox 1586 1862 1724 1918" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἴχετο</ins>
-          </span>
-        </span>
-        <span id="w_216" class="ocr_word" title="bbox 1757 1861 1800 1920" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ Ἀρκεσίλαος)</ins>
           </span>
         </span>
       </span>
@@ -1431,9 +1431,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_276" class="ocr_word" title="bbox 719 2508 858 2551">
+        <span id="w_276_0" class="ocr_word" title="bbox 719 2508 858 2551">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_276_1" class="ocr_word" title="bbox 719 2508 858 2551">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 878 2507 941 2551">
@@ -1447,9 +1452,14 @@
             <ins class="alt" title="nlp 1.00">40.</ins>
           </span>
         </span>
-        <span id="w_279" class="ocr_word" title="bbox 1080 2507 1123 2565" lang="grc">
+        <span id="w_279_0" class="ocr_word" title="bbox 1080 2507 1123 2565">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ</ins>
+            <ins class="alt" title="nlp 2.00">(ὁ</ins>
+          </span>
+        </span>
+        <span id="w_279_1" class="ocr_word" title="bbox 1080 2507 1123 2565">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1165 2507 1455 2565" lang="grc">
@@ -1460,16 +1470,6 @@
         <span id="w_281" class="ocr_word" title="bbox 1488 2508 1819 2564" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φιλομειράκιός</ins>
-          </span>
-        </span>
-        <span id="w_282" class="ocr_word" title="bbox 1843 2524 1888 2551" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τε</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 1915 2525 1970 2563" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἦν</ins>
           </span>
         </span>
       </span>
@@ -1764,9 +1764,14 @@
             <del title="nlp 0.90">Diog.</del>
           </span>
         </span>
-        <span id="w_339" class="ocr_word" title="bbox 875 3002 995 3036">
+        <span id="w_339_0" class="ocr_word" title="bbox 875 3002 995 3036">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_339_1" class="ocr_word" title="bbox 875 3002 995 3036">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_340" class="ocr_word" title="bbox 1017 3001 1062 3036">
@@ -1795,12 +1800,6 @@
         <span id="w_344" class="ocr_word" title="bbox 1737 3006 1756 3036">
           <span class="alternatives">
             <ins title="nlp 2.00">9</ins>
-          </span>
-        </span>
-        <span id="w_345" class="ocr_word" title="bbox 1783 3001 1969 3037">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">desidero:</ins>
-            <del title="nlp 0.90">desidero:</del>
           </span>
         </span>
       </span>
@@ -1866,8 +1865,7 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 1423 3055 1495 3090">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Yix</ins>
-            <del title="nlp 0.90">Yix</del>
+            <ins title="nlp 2.00">Vix</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1521 3067 1614 3101">
